# agentic-evals

./: .env  pyproject.toml
data/: assurance_demo.db
evals/: analyst_evals.yaml
reports/traces/: trace-2026-06-29T13-28-07-519660+00-00.json
src/agentic_evals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/db_agent/: analyst.py  cli.py  context_tools.py  db.py  eval_runner.py  finding_tools.py  policy.py  schema.py  security.py  tools.py  tracing.py  vendor_tools.py
tests/: test_agent_safety_claim.py  test_analyst.py  test_eval_runner.py  test_policy.py  test_security_canary.py  test_tracing.py
