[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-evals"
version = "0.1.0"
description = "Local database-backed security analyst agent."
requires-python = ">=3.10"
dependencies = [
  "sqlalchemy",
  "python-dotenv",
  "click>=8.1,<8.2",
  "typer>=0.12.5,<0.13.0",
  "rich",
  "pydantic",
  "pandas",
  "pyyaml"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dbagent = "db_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
